{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 137,
  "lineage": "90680d66-6cf5-fae5-7bab-100059c9964e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "TGW-Internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:328510558004:transit-gateway/tgw-07265472c03bb8f63",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "TGW-Internet",
            "dns_support": "enable",
            "id": "tgw-07265472c03bb8f63",
            "multicast_support": "disable",
            "owner_id": "328510558004",
            "tags": {
              "Name": "TGW-Internet"
            },
            "tags_all": {
              "Name": "TGW-Internet"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "Egress-Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-07c23b04da8ca1872",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-01701ef1744c78bdf",
              "subnet-07d5cde208f147121"
            ],
            "tags": {
              "Name": "Egress-Attachment"
            },
            "tags_all": {
              "Name": "Egress-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-07265472c03bb8f63",
            "vpc_id": "vpc-019dbc98fc4ebed68",
            "vpc_owner_id": "328510558004"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1b20e99e3698a70",
            "domain": "vpc",
            "id": "eipalloc-0e1b20e99e3698a70",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-199-60-190.compute-1.amazonaws.com",
            "public_ip": "34.199.60.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fff100454c114fe",
            "domain": "vpc",
            "id": "eipalloc-08fff100454c114fe",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-173-80-10.compute-1.amazonaws.com",
            "public_ip": "54.173.80.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:internet-gateway/igw-0cf0d1d88546c5df2",
            "id": "igw-0cf0d1d88546c5df2",
            "owner_id": "328510558004",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-019dbc98fc4ebed68"
          },
          "dependencies": [
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1b20e99e3698a70",
            "connectivity_type": "public",
            "id": "nat-040f13ddb06a9686f",
            "network_interface_id": "eni-096f7a6866493bffb",
            "private_ip": "192.168.1.189",
            "public_ip": "34.199.60.190",
            "subnet_id": "subnet-048c57b8de3da24f0",
            "tags": {
              "Name": "nat_gw_1"
            },
            "tags_all": {
              "Name": "nat_gw_1"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip_1",
            "aws_internet_gateway.IGW",
            "aws_subnet.Egress-Public-AZ1",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fff100454c114fe",
            "connectivity_type": "public",
            "id": "nat-096b3d619f5dc70da",
            "network_interface_id": "eni-002714fed2b71096a",
            "private_ip": "192.168.2.28",
            "public_ip": "54.173.80.10",
            "subnet_id": "subnet-0ed2ae96791566806",
            "tags": {
              "Name": "nat_gw_2"
            },
            "tags_all": {
              "Name": "nat_gw_2"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip_2",
            "aws_internet_gateway.IGW",
            "aws_subnet.Egress-Public-AZ2",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Egress-Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:route-table/rtb-09afe6882e79c4aad",
            "id": "rtb-09afe6882e79c4aad",
            "owner_id": "328510558004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-040f13ddb06a9686f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT-Route"
            },
            "tags_all": {
              "Name": "NAT-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-019dbc98fc4ebed68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_ip_1",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw_1",
            "aws_subnet.Egress-Public-AZ1",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Egress-Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:route-table/rtb-0975f183f7378f1b4",
            "id": "rtb-0975f183f7378f1b4",
            "owner_id": "328510558004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf0d1d88546c5df2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Default-Route"
            },
            "tags_all": {
              "Name": "Default-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-019dbc98fc4ebed68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Egress-Private-AZ1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ef087825ef21b01",
            "route_table_id": "rtb-09afe6882e79c4aad",
            "subnet_id": "subnet-07d5cde208f147121"
          },
          "dependencies": [
            "aws_eip.nat_ip_1",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.Egress-Private-RT",
            "aws_subnet.Egress-Private-AZ1",
            "aws_subnet.Egress-Public-AZ1",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Egress-Private-AZ2-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae912aceb23f0160",
            "route_table_id": "rtb-09afe6882e79c4aad",
            "subnet_id": "subnet-01701ef1744c78bdf"
          },
          "dependencies": [
            "aws_eip.nat_ip_1",
            "aws_internet_gateway.IGW",
            "aws_nat_gateway.nat_gw_1",
            "aws_route_table.Egress-Private-RT",
            "aws_subnet.Egress-Private-AZ2",
            "aws_subnet.Egress-Public-AZ1",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Egress-Public-AZ1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f7b2f998a02f55",
            "route_table_id": "rtb-0975f183f7378f1b4",
            "subnet_id": "subnet-048c57b8de3da24f0"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Egress-Public-RT",
            "aws_subnet.Egress-Public-AZ1",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Egress-Public-AZ2-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cedc360c4b89543",
            "route_table_id": "rtb-0975f183f7378f1b4",
            "subnet_id": "subnet-0ed2ae96791566806"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.Egress-Public-RT",
            "aws_subnet.Egress-Public-AZ2",
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App1-Private-AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-0c8dde8bb19ff5a82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8dde8bb19ff5a82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App1-Private-AZ1"
            },
            "tags_all": {
              "Name": "App1-Private-AZ1"
            },
            "vpc_id": "vpc-00fd8409fb5835941"
          },
          "dependencies": [
            "aws_vpc.App1-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App1-Private-AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-0062a61f8890bb729",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0062a61f8890bb729",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App1-Private-AZ2"
            },
            "tags_all": {
              "Name": "App1-Private-AZ2"
            },
            "vpc_id": "vpc-00fd8409fb5835941"
          },
          "dependencies": [
            "aws_vpc.App1-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App2-Private-AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-0808fa960eac90312",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0808fa960eac90312",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App2-Private-AZ1"
            },
            "tags_all": {
              "Name": "App2-Private-AZ1"
            },
            "vpc_id": "vpc-055785125c36f7df0"
          },
          "dependencies": [
            "aws_vpc.App2-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App2-Private-AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-0c4aed08d48eb9de7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4aed08d48eb9de7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App2-Private-AZ2"
            },
            "tags_all": {
              "Name": "App2-Private-AZ2"
            },
            "vpc_id": "vpc-055785125c36f7df0"
          },
          "dependencies": [
            "aws_vpc.App2-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Egress-Private-AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-07d5cde208f147121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d5cde208f147121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Egress-Private-AZ1"
            },
            "tags_all": {
              "Name": "Egress-Private-AZ1"
            },
            "vpc_id": "vpc-019dbc98fc4ebed68"
          },
          "dependencies": [
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Egress-Private-AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-01701ef1744c78bdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01701ef1744c78bdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Egress-Private-AZ2"
            },
            "tags_all": {
              "Name": "Egress-Private-AZ2"
            },
            "vpc_id": "vpc-019dbc98fc4ebed68"
          },
          "dependencies": [
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Egress-Public-AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-048c57b8de3da24f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048c57b8de3da24f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Egress-Public-AZ1"
            },
            "tags_all": {
              "Name": "Egress-Public-AZ1"
            },
            "vpc_id": "vpc-019dbc98fc4ebed68"
          },
          "dependencies": [
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Egress-Public-AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:subnet/subnet-0ed2ae96791566806",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed2ae96791566806",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328510558004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Egress-Public-AZ2"
            },
            "tags_all": {
              "Name": "Egress-Public-AZ2"
            },
            "vpc_id": "vpc-019dbc98fc4ebed68"
          },
          "dependencies": [
            "aws_vpc.Egress-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "App1-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:vpc/vpc-00fd8409fb5835941",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f13cf0c5a1567df4",
            "default_route_table_id": "rtb-04bc87f9c92534274",
            "default_security_group_id": "sg-055ed27ee00524382",
            "dhcp_options_id": "dopt-03631b2cb50088ef0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00fd8409fb5835941",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04bc87f9c92534274",
            "owner_id": "328510558004",
            "tags": {
              "Name": "App1-VPC"
            },
            "tags_all": {
              "Name": "App1-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "App2-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:vpc/vpc-055785125c36f7df0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08f8f35f0d8cc3665",
            "default_route_table_id": "rtb-034df0e19f0e7062a",
            "default_security_group_id": "sg-05aa5775d150e3b9c",
            "dhcp_options_id": "dopt-03631b2cb50088ef0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-055785125c36f7df0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034df0e19f0e7062a",
            "owner_id": "328510558004",
            "tags": {
              "Name": "App2-VPC"
            },
            "tags_all": {
              "Name": "App2-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Egress-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:328510558004:vpc/vpc-019dbc98fc4ebed68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0934ba4ebe10ebd89",
            "default_route_table_id": "rtb-0dc90213d1e457d0b",
            "default_security_group_id": "sg-0796b5ee391e51eef",
            "dhcp_options_id": "dopt-03631b2cb50088ef0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-019dbc98fc4ebed68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc90213d1e457d0b",
            "owner_id": "328510558004",
            "tags": {
              "Name": "Egress-VPC"
            },
            "tags_all": {
              "Name": "Egress-VPC"
            }
          }
        }
      ]
    }
  ]
}